# NEAT

./: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  LICENSE.md  NEAT  README.md  Singularity  bacterial_genreads_wrapper.py  branchbam.txt  default_models.py  dev-environment.yml  environment.yml  gen_reads.py  gen_reads_broken.py  gen_reads_parallel.py  masterbam.txt  neat_config.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  template_neat_config.txt  test_yash.txt  tracker_test.py  version.py
BacterialWrapperScript/: BacterialWrapperScript.py  runner.py
config_template/: config_test1.yml  config_test10.yml  config_test11.yml  config_test2.yml  config_test3.yml  config_test4.yml  config_test5.yml  config_test6.yml  config_test7.yml  config_test8.yml  config_test9.yml  simple_parallel_template.yml  simple_template.yml  template_neat_config.yml  template_parallel_config.yml
data/: H1N1.bed  H1N1.fa  H1N1.vcf  baby.fastq  discard.bed  ecoli.fa.fai  park.vcf  real_human_subsampled.bam.bai  small.genomecov  small.vcf  test_conifg.yml  yeast_chr1.fasta
models/: MutModel_BRCA_US_ICGC.p  MutModel_CLLE-ES_ICGC.p  MutModel_NA12878.p.REMOVED.git-id  MutModel_NA12878_noIndel.p  MutModel_SKCM-US_ICGC.p  README.md
neat/: __init__.py  __main__.py
sample_data/: baby.bam  baby.fastq  ecoli.fa.fai
source/: Coverage.py  Fragment.py  Models.py  Options.py  Read.py  ReadContainer.py  SequenceContainer.py  SequencingErrors.py  TSamRecord.py  Tracker.py  Variant.py  __init__.py  bed_func.py  constants_and_defaults.py  constants_and_models.py  error_handling.py  generate_mutation_model.py  input_checking.py  input_file_reader.py  method1.py  method2.py  output_file_writer.py  ploid_functions.py  probability.py  ref_func.py  run_neat.py  test_write.py  vcf_func.py
tests/: conftest.py
utilities/: README.md  (+11 more)
(+197 files in other folders)
